force-app/main/default/objects/Support_Option__c/Support_Option__c.object-meta.xml
<CustomObject>
    <label>Support Option</label>
    <nameField>
        <label>Option</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>